--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,60 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>운세 보는 챗도지</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        #chat-container {
-            width: 300px;
-            background-color: #fff;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        #result-container {
-            padding: 10px;
-            height: 200px;
-            overflow-y: auto;
-        }
-
-        #input-container {
-            display: flex;
-        }
-
-        #input-text {
-            flex: 1;
-            padding: 8px;
-            border: none;
-            border-radius: 5px 0 0 5px;
-        }
-
-        #send-button {
-            cursor: pointer;
-            background-color: #3498db;
-            color: #fff;
-            padding: 10px;
-            border: none;
-            border-radius: 0 5px 5px 0;
-        }
-
-        #send-button:disabled {
-            background-color: #bdc3c7;
-            cursor: not-allowed;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="title">운세보는 챗도지</div>
     <div id="chat-container">
+        
         <div id="result-container"></div>
         <div id="input-container">
             <input type="text" id="input-text" placeholder="운세를 물어보세요">
